# binfly

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json
examples/: CMakeLists.txt  binfly.cu
include/binfly/: block_binfly.cuh  device_binfly.cuh
include/binfly/detail/: binary_search.cuh  block_search.cuh  partitioned_search.cuh  utils.cuh  warp_search.cuh
tests/: CMakeLists.txt  binary_search_test.cu  block_search_test.cu  device_binfly_test.cu  partitioned_search_test.cu  warp_search_test.cu
